Tweaked gem load order for specs

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ before_script:
   - sh -c "if [ \"$DB\" = 'mysql' ]; then mysql -e 'create database fat_free_crm_test;'; fi"
 
 # Run RSpec tests and ensure that assets can compile without errors
-script: "bundle exec rake && bundle exec rake assets:precompile:primary RAILS_ENV=production"
+script: "bundle exec rake && bundle exec rake app:assets:precompile:primary RAILS_ENV=production"
 
 # To stop Travis from running tests for a new commit,
 # add the following to your commit message: [ci skip]
