--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,9 @@ bundler_args: --path=vendor/bundle --without heroku
 before_install: gem install bundler --pre
 
 before_script:
-  - sh -c "if [ \"$DB\" = 'postgres' ]; then psql -c 'create database fat_free_crm_test;' -U postgres; fi"
-  - sh -c "if [ \"$DB\" = 'mysql' ]; then mysql -e 'create database fat_free_crm_test;'; fi"
+  - sh -c "if [ \"$DB\" = 'postgres' ]; then cp config/database.postgres.yml spec/internal/config/database.yml && psql -c 'create database fat_free_crm_test;' -U postgres; fi"
+  - sh -c "if [ \"$DB\" = 'mysql' ]; then cp config/database.mysql.yml spec/internal/config/database.yml && mysql -e 'create database fat_free_crm_test;'; fi"
+  - sh -c "if [ \"$DB\" = 'sqlite' ]; then cp config/database.sqlite.yml spec/internal/config/database.yml; fi"
 
 # Run RSpec tests and ensure that assets can compile without errors
 script: "bundle exec rake && bundle exec rake app:assets:precompile:primary RAILS_ENV=production"
